# projest-ai

./: CMakeLists.txt  CSVManager.cpp  CSVManager.h  Database.cpp  Database.h  GUI.cpp  GUI.h  README.md  Statistics.cpp  Statistics.h  Student.cpp  Student.h  Validation.cpp  Validation.h  main.cpp
